--- a/gulp_001/webapp/index.html
+++ b/gulp_001/webapp/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-  <script>
-  window.location.href = './modules/js_demo/index.html';
-  </script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Document</title></head><body><script>window.location.href="./modules/js_demo/index.html"</script></body></html>
