--- a/gulp_001/src_webapp/modules/js_demo/index.html
+++ b/gulp_001/src_webapp/modules/js_demo/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="app">
     <div class="demo" id="demo">JS-demo</div>
-    <div class="info" id="info">asd</div>
+    <div class="info" id="info">82期前端</div>
   </div>
   <!-- JQ -->
   <script src="../../scripts/libs/jquery/jquery.js" type="text/javascript"></script>
